04_compile/grade.txt
Grading at Tue Jul 24 08:26:10 UTC 2018
Compiling your code
hello.c:3:9: error: macro names must be identifiers
 #define 0 EXIT_SUCCESS
         ^
hello.c:4:6: error: return type of ‘main’ is not ‘int’ [-Werror=main]
 void main(){
      ^
hello.c: In function ‘main’:
hello.c:6:5: error: expected ‘;’ before ‘return’
     return EXIT_SUCCESS;
     ^
cc1: all warnings being treated as errors
Your code did not compile

Overall Grade: FAILED
